--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'theme';
+
+@import "@nebular/theme/styles/globals";
+
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/mixins";
+
+@include nb-install() {
+    @include nb-theme-global();
+};
