--- a/web/src/app/app.scss
+++ b/web/src/app/app.scss
@@ -1,3 +1,13 @@
 :host {
   display: contents;
 }
+
+span#alerts {
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  padding-left: 1em;
+  padding-right: 1em;
+  position: absolute;
+  flex-direction: column;
+}
