--- a/web/src/app/page/login/login.component.html
+++ b/web/src/app/page/login/login.component.html
@@ -8,19 +8,22 @@
               <h2 class="title">Login</h2>
               <small class="sub-title">Welcome back! Please log in with your email.</small>
               <form>
-                <div class="form-group">
+                <div class="form-group" [formGroup]="loginForm">
                   <label for="exampleInputEmail1" class="label">Email address</label>
-                  <input type="email" nbInput fullWidth id="exampleInputEmail1" placeholder="Email">
+                  <input type="email" nbInput fullWidth id="exampleInputEmail1" placeholder="Email"
+                    formControlName="email">
                 </div>
-                <div class="form-group">
+                <div class="form-group" [formGroup]="loginForm">
                   <label for="exampleInputPassword1" class="label">Password</label>
-                  <input type="password" nbInput fullWidth id="exampleInputPassword1" placeholder="Password">
+                  <input type="password" nbInput fullWidth id="exampleInputPassword1" placeholder="Password"
+                    formControlName="password">
                 </div>
-                <div class="form-group">
-                  <nb-checkbox>Remember me</nb-checkbox>
+                <div class="form-group" [formGroup]="loginForm">
+                  <nb-checkbox formControlName="remember">Remember me</nb-checkbox>
                 </div>
               </form>
-              <button nbButton fullWidth (click)="gotoHome()" type="button" class="home-button">
+              <button nbButton fullWidth [disabled]="!loginForm.valid" (click)="login()" type="button"
+                class="home-button">
                 Login
               </button>
             </div>
