--- a/web/src/app/theme/layout/layout.html
+++ b/web/src/app/theme/layout/layout.html
@@ -3,9 +3,11 @@
     <janus-header></janus-header>
   </nb-layout-header>
 
-  <nb-sidebar class="menu-sidebar" tag="menu-sidebar" responsive>
+  @if (menu.length > 1) {
+  <nb-sidebar class="menu-sidebar" tag="menu-sidebar" [right]="sidebarToRight" responsive>
     <ng-content select="nb-menu"></ng-content>
   </nb-sidebar>
+  }
 
   <nb-layout-column>
     <ng-content select="router-outlet"></ng-content>
