OHM: initial cleanup

--- a/web/src/app/page/login/login.component.html
+++ b/web/src/app/page/login/login.component.html
@@ -5,7 +5,10 @@
         <nb-card>
           <nb-card-body>
             <div class="flex-centered">
-              <h2 class="title">Login</h2>
+              <h2 class="title">
+                <img src="logo-dark.svg">
+                Login
+              </h2>
               <small class="sub-title">Welcome back! Please log in with your email.</small>
               <form>
                 <div class="form-group" [formGroup]="loginForm">
