--- a/web/src/app/theme/components/header/header.component.html
+++ b/web/src/app/theme/components/header/header.component.html
@@ -5,24 +5,15 @@
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
     }
+    <img src="logo-dark.svg">
     <div class="logo" (click)="navigateHome()">
-      Janus
+      Omkar
     </div>
   </div>
-  <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
-    @for (theme of themes; track theme) {
-    <nb-option [value]="theme.value"> {{ theme.name }}</nb-option>
-    }
-  </nb-select>
 </div>
 
 <div class="header-container">
   <nb-actions size="small">
-    <nb-action class="control-item">
-      <nb-search type="rotate-layout"></nb-search>
-    </nb-action>
-    <nb-action class="control-item" icon="email-outline"></nb-action>
-    <nb-action class="control-item" icon="bell-outline"></nb-action>
     <nb-action class="user-action">
       <nb-user [nbContextMenu]="userMenu"
                nbContextMenuTag="user-menu"
