--- a/web/src/app/theme/components/header/header.component.scss
+++ b/web/src/app/theme/components/header/header.component.scss
@@ -11,6 +11,10 @@
     display: flex;
     align-items: center;
     width: calc(#{nb-theme(sidebar-width)} - #{nb-theme(header-padding)});
+
+    img {
+      height: 3em;
+    }
   }
 
   nb-action {
