--- a/web/src/app/page/page.component.html
+++ b/web/src/app/page/page.component.html
@@ -1,4 +1,4 @@
 <janus-layout>
-  <nb-menu [items]="menu"></nb-menu>
+  <nb-menu [items]="menu()"></nb-menu>
   <router-outlet></router-outlet>
 </janus-layout>
